--- a/webapp/src/app/pacman-features/modules/compliance/card/card.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/card/card.component.html
@@ -1,50 +1,78 @@
 <mat-card class="panel">
-  <mat-card-header>
-    {{ card.header }}
-    <div class="graph-dropdown-container" (blur)="test()" *ngIf="card.id == 3">
-      <div class="graph-dropdown-wrapper">
-        <div
-            class="date-selection-trigger"
-            #menuTrigger="matMenuTrigger"
-            [matMenuTriggerFor]="menu"
-        ></div>
-        <app-dropdown (closeEventEmitter)="onDropdownClose()" (click)="ifCustomSelected()" [items]="['1 week', '1 month', '6 months', '12 months', 'All time', 'Custom']" [selectedItem]="selectedItem" (selected)="handleGraphIntervalSelection($event)"></app-dropdown>
-        <mat-menu #menu="matMenu" xPosition="before">
-            <div class="date-selection-modal" >
-                <app-date-selection (datesSelected)="dateIntervalSelected($event.from, $event.to)"></app-date-selection>
+    <mat-card-header>
+        {{ card.header }}
+        <div class="graph-dropdown-container" (blur)="test()" *ngIf="card.id === 3">
+            <div class="graph-dropdown-wrapper">
+                <div
+                    class="date-selection-trigger"
+                    #menuTrigger="matMenuTrigger"
+                    [matMenuTriggerFor]="menu"
+                ></div>
+                <app-dropdown
+                    (closeEventEmitter)="onDropdownClose()"
+                    (click)="ifCustomSelected()"
+                    [items]="['1 week', '1 month', '6 months', '12 months', 'All time', 'Custom']"
+                    [selectedItem]="selectedItem"
+                    (selected)="handleGraphIntervalSelection($event)"
+                ></app-dropdown>
+                <mat-menu #menu="matMenu" xPosition="before">
+                    <div class="date-selection-modal">
+                        <app-date-selection
+                            (datesSelected)="dateIntervalSelected($event.from, $event.to)"
+                        ></app-date-selection>
+                    </div>
+                </mat-menu>
             </div>
-        </mat-menu>
-      </div>
-    </div>
-  </mat-card-header>
-  <mat-card-content>
-    <div class="chart" *ngIf="card.id == 1">
-      <div [class.loader]="data.length==0 && dataError==''"></div>
-      <app-error-message *ngIf="dataError" [selectedValue]="dataError"></app-error-message>
-      <app-progress-bar-chart *ngIf="dataError=='' && data.length>0" [bars]="data"></app-progress-bar-chart>
-    </div>
-    <div class="chart" *ngIf="card.id == 2">
-      <div [class.loader]="!data && dataError==''"></div>
-      <app-error-message *ngIf="dataError" [selectedValue]="dataError"></app-error-message>
-      <div class="graph-chart-cont relative" id="dashboardDoughnut">
-        <app-doughnut-chart *ngIf="dataError=='' && data" [chartContId]="'dashboardDoughnut'" [graphData]="data"
-          [graphWidth]="widgetWidth" [flexTrue]="true" [graphHeight]="widgetHeight" [MainTextcolor]="MainTextcolor"
-          [innerRadius]="innerRadius" [outerRadius]="outerRadius" [strokeColor]="strokeColor"
-          (navigatePage)="navigateDataTable($event)">
-        </app-doughnut-chart>
-      </div>
-    </div>
-    <div class="chart" *ngIf="card.id == 3" style="overflow-y: scroll;">
-      <div [class.loader]="data.length==0 && dataError==''"></div>
-      <app-error-message *ngIf="dataError" [selectedValue]="dataError"></app-error-message>
-      <div class="chart-wrapper" id="TotalAssetsCountTrend" style="height: 100%; width: 100%; background-color: white;">
-          <app-multiline-zoom-graph *ngIf="data.length>0 && dataError==''" [id]="data[0].info.id" [showLegend]="data[0].info.showLegend" [yAxisLabel]="data[0].info.yAxisLabel" [graphHeight]="data[0].info.height" [graphLinesData]="data"></app-multiline-zoom-graph>
-      </div>
-    </div>
-  </mat-card-content>
-  <mat-card-actions *ngIf="card.footer">
-    <button mat-button (click)="card.cardButtonAction()">
-      {{ card.footer }} <img src="/assets/icons/right-arrow-icon.svg" />
-    </button>
-  </mat-card-actions>
+        </div>
+    </mat-card-header>
+    <mat-card-content>
+        <div class="chart" *ngIf="card.id === 1">
+            <div [class.loader]="data.length === 0 && dataError === ''"></div>
+            <app-error-message *ngIf="dataError" [selectedValue]="dataError"></app-error-message>
+            <app-progress-bar-chart
+                *ngIf="dataError === '' && data.length > 0"
+                [bars]="data"
+                (navigateTo)="navigateToViolationsByCategory($event)"
+            ></app-progress-bar-chart>
+        </div>
+        <div class="chart" *ngIf="card.id === 2">
+            <div [class.loader]="!data && dataError === ''"></div>
+            <app-error-message *ngIf="dataError" [selectedValue]="dataError"></app-error-message>
+            <div class="graph-chart-cont relative" id="dashboardDoughnut">
+                <app-doughnut-chart
+                    *ngIf="dataError === '' && data"
+                    [chartContId]="'dashboardDoughnut'"
+                    [graphData]="data"
+                    [graphWidth]="widgetWidth"
+                    [flexTrue]="true"
+                    [graphHeight]="widgetHeight"
+                    [MainTextcolor]="MainTextcolor"
+                    [innerRadius]="innerRadius"
+                    [outerRadius]="outerRadius"
+                    [strokeColor]="strokeColor"
+                    (navigatePage)="navigateToViolationsByCategory($event)"
+                >
+                </app-doughnut-chart>
+            </div>
+        </div>
+        <div class="chart" *ngIf="card.id === 3">
+            <div [class.loader]="data.length === 0 && dataError === ''"></div>
+            <app-error-message *ngIf="dataError" [selectedValue]="dataError"></app-error-message>
+            <div class="chart-wrapper" id="TotalAssetsCountTrend">
+                <app-multiline-zoom-graph
+                    *ngIf="data.length > 0 && dataError === ''"
+                    [id]="data[0].info.id"
+                    [showLegend]="data[0].info.showLegend"
+                    [yAxisLabel]="data[0].info.yAxisLabel"
+                    [graphHeight]="data[0].info.height"
+                    [graphLinesData]="data"
+                ></app-multiline-zoom-graph>
+            </div>
+        </div>
+    </mat-card-content>
+    <mat-card-actions *ngIf="card.footer">
+        <button mat-button (click)="card.cardButtonAction()">
+            {{ card.footer }} <img src="/assets/icons/right-arrow-icon.svg" />
+        </button>
+    </mat-card-actions>
 </mat-card>
