feat(compliance-dashboard): navigation to violations by category

--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -32,6 +32,7 @@
         >
             <mat-grid-tile>
                 <app-card
+                    [breadcrumbPresent]="breadcrumbPresent"
                     [card]="cards[0]"
                     [data]="complianceData"
                     [dataError]="complianceDataError"
