--- a/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
@@ -31,7 +31,7 @@
                             [searchQuery]="searchTxt" [tableErrorMessage]='errorMessage'
                             [showSearchBar]="true" [showAddRemoveCol]="true" [showFilterBtn]="true" [onScrollDataLoader]="onScrollDataLoader" [totalRows]="totalRows"
                             [tableScrollTop]="tableScrollTop" [tableDataLoaded]="tableDataLoaded" [columnsSortFunctionMap]="columnsSortFunctionMap"
-                            [rowClickable]="true" [doLocalFilter]="true" [doLocalSearch]="false"
+                            [rowClickable]="true" [doLocalFilter]="true" [doLocalSearch]="true"
                             [filterTypeLabels]="filterTypeLabels" [filterTagLabels]="filterTagLabels" [filteredArray]="filters">
                         </app-table>
                         <div class="data-table-desc">{{dataTableDesc}}</div>
