--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
@@ -63,6 +63,7 @@
                 (rowSelectEventEmitter)="goToDetails($event)"
                 (searchCalledEventEmitter)="callNewSearch($event)"
                 (searchInColumnsChanged)="handleSearchInColumnsChange($event)"
+                (headerColNameSelected)="handleHeaderColNameSelection($event)"
             >
             </app-table>
         </div>
