--- a/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
@@ -40,6 +40,7 @@
                                [tableScrollTop]="tableScrollTop"
                                [totalRows]="totalRows"
                                [whiteListColumns]="whiteListColumns"
+                               (headerColNameSelected)="handleHeaderColNameSelection($event)"
                                style="height: 100%; width: 100%;">
                     </app-table>
                 </div>
