fix: asset list when navigate through asset summary

--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -169,7 +169,7 @@
                                     <span>No Data</span>
                                 </div>
                             </ng-template>
-                            <div class="copy-icon" *ngIf="true||element[column]?.haveCopyElement"><app-copy-element [CopyElement]="element[column].valueText" [iconSize]="'10px'"></app-copy-element></div>
+                            <div class="copy-icon" *ngIf="true||element[column]?.haveCopyElement"><app-copy-element [CopyElement]="element[column]?.valueText" [iconSize]="'10px'"></app-copy-element></div>
                         </div>
                     </ng-template>
 
