feat: Added new filters selection to list views

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
@@ -64,6 +64,7 @@
                 (searchCalledEventEmitter)="callNewSearch($event)"
                 (searchInColumnsChanged)="handleSearchInColumnsChange($event)"
                 (headerColNameSelected)="handleHeaderColNameSelection($event)"
+                gapBetweenFilterAndTable="0px"
             >
             </app-table>
         </div>
