--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -111,6 +111,10 @@
                     [filterTagLabels]="filterTagLabels"
                     [filteredArray]="filters"
                     [rowSize]="'SM'"
+                    (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
+                    (selectedFilter)="handleFilterSelection()"
+                    (selectedFilterType)="handleFilterTypeSelection()"
+                    (deleteFilters)="deleteFilters($event)"
                 >
                 </app-table>
             </mat-grid-tile>
