--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
@@ -51,6 +51,7 @@
             [tableScrollTop]="tableScrollTop"
             [totalRows]="totalRows"
             [whiteListColumns]="whiteListColumns"
+            [selectedRowIndex]="selectedRowIndex"
             (deleteFilters)="deleteFilters($event)"
             (downloadClicked)="handlePopClick($event)"
             (headerColNameSelected)="handleHeaderColNameSelection($event)"
