--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
@@ -65,6 +65,10 @@
                 (searchInColumnsChanged)="handleSearchInColumnsChange($event)"
                 (headerColNameSelected)="handleHeaderColNameSelection($event)"
                 gapBetweenFilterAndTable="0px"
+                (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
+                (selectedFilter)="handleFilterSelection()"
+                (selectedFilterType)="handleFilterTypeSelection()"
+                (deleteFilters)="deleteFilters($event)"
             >
             </app-table>
         </div>
