--- a/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
@@ -41,7 +41,8 @@
                                [totalRows]="totalRows"
                                [whiteListColumns]="whiteListColumns"
                                (headerColNameSelected)="handleHeaderColNameSelection($event)"
-                               style="height: 100%; width: 100%;">
+                               style="height: 100%; width: 100%;"
+                               (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)">
                     </app-table>
                 </div>
             </div>
