feat: persist selected row on row click

--- a/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
@@ -36,7 +36,8 @@
                             (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
                             (selectedFilter)="handleFilterSelection()"
                             (selectedFilterType)="handleFilterTypeSelection()"
-                            (deleteFilters)="deleteFilters($event)">
+                            (deleteFilters)="deleteFilters($event)"
+                            [selectedRowIndex]="selectedRowIndex">
                         </app-table>
                         <div class="data-table-desc">{{dataTableDesc}}</div>
                     </div>
