--- a/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-list/asset-list.component.html
@@ -50,6 +50,8 @@
                             (selectedFilter)="changeFilterTags($event)"
                             (selectedFilterType)="changeFilterType($event)"
                             (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
+                            [doLocalSort]="false"
+                            [selectedRowIndex]="selectedRowIndex"
                         ></app-table>
                         <div class="data-table-desc">{{ dataTableDesc }}</div>
                     </div>
