--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -115,6 +115,7 @@
                     (selectedFilter)="handleFilterSelection()"
                     (selectedFilterType)="handleFilterTypeSelection()"
                     (deleteFilters)="deleteFilters($event)"
+                    [selectedRowIndex]="selectedRowIndex"
                 >
                 </app-table>
             </mat-grid-tile>
