--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase/policy-knowledgebase.component.html
@@ -69,6 +69,7 @@
                 (selectedFilter)="handleFilterSelection()"
                 (selectedFilterType)="handleFilterTypeSelection()"
                 (deleteFilters)="deleteFilters($event)"
+                [selectedRowIndex]="selectedRowIndex"
             >
             </app-table>
         </div>
