--- a/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/cloud-notifications/cloud-notifications.component.html
@@ -42,7 +42,8 @@
                                [whiteListColumns]="whiteListColumns"
                                (headerColNameSelected)="handleHeaderColNameSelection($event)"
                                style="height: 100%; width: 100%;"
-                               (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)">
+                               (whitelistColumnsChanged)="handleWhitelistColumnsChange($event)"
+                               [selectedRowIndex]="selectedRowIndex">
                     </app-table>
                 </div>
             </div>
